syntax = "proto3";
import "ResuleCode.Proto";
import "Player.proto";

 //请求匹配，1002001
message CSMatchReq{
     string userAccount = 1;   //登录账号
}

 //匹配请求返回,2001001
message SCMatchRes{
     int32 state = 1;          // 0 等待中  1匹配完成 2断线重新进来 白色法师鞋子
     string udpAdress = 2;      // relay信息 udp ip & 端口 & 房间号 
     int32 port = 3;            //端口号
     int32 roomId = 4;         //房间id
     int32 randomSeed = 5;      //随机种子
     int32 roleId = 6;    //房间里玩家索引
     int32 tick = 7;          //服务器tick同步
     repeated PlayerData playerList = 8;  //匹配成功的时候下发玩家列表
}

//取消匹配, 1002002
message CSCancelMatch{

}

//取消匹配返回, 2002002
message SCCancelMatch{
     ResuleCode resCode = 1;
}

