syntax = "proto3";

// 协议号枚举
enum MessageType {
  None = 0;
  CSLoginReq = 1001001;
  SCLoginRes = 2001001;

  CSMatchReq = 1002001;  //请求匹配
  SCMatchRes = 2002001;  //匹配请求返回
  CSCancelMatchReq = 1002002;  //取消匹配请求
  SCCancelMatchRes = 2002002;  //取消匹配返回

  CSFrameHeartBeat = 1003001;  //帧同步心跳
  SCFrameHeartBeat = 2003001;  //帧同步心跳
  CSPostClientUdpAddress = 1003002;  //临时协议，上传Udp地址
  CSExitGame = 1003003;  //退出当前对局
  SCExitGame = 2003003;  //退出当前对局
  CSCSFrameSample = 1003004; //操作采集,1003004
  SCFrameData = 2003005;  //帧同步下发

  // todo ..
  
}